# quarry

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BLIND_TEST_GUIDE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_ROADMAP.md  Dockerfile  INSTALLATION.md  LICENSE  MANUAL_TESTING.md  README.md  REFACTOR_SUMMARY.md  RELEASE.md  USAGE_GUIDE.md  ascii-text-art.txt  pyproject.toml  quarry-output-refactor.md  requirements-lock.txt  requirements.txt  test_inspector.py
.github/agents/: Codemaster.agent.md  Full-Context-Review.agent.md  Refine.agent.md
.github/workflows/: ci.yml  pypi-publish.yml  release.yml
data/cache/: state.sqlite
docs/: API_REFERENCE.md  ARCHITECTURE_V2.md  DEPLOY.md  DEPLOYMENT_ROADMAP.md  FRAMEWORK_INTEGRATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INFINITE_SCROLL_API_GUIDE.md  PHASE1_UX_IMPROVEMENTS.md  README.md  SECURITY.md  SELECTOR_QUICK_REFERENCE.md  STRATEGIC_POSITIONING_REPORT.md  TESTING.md  TROUBLESHOOTING.md  USER_TESTING_PLAN.md  WIZARD.md
docs/archive/: ARCHITECTURE.md  CLEANUP_PLAN.md  CONNECTOR_GENERATOR_SUMMARY.md  FRAMEWORK_INTEGRATION.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  QUICK_TEST.md  SESSION_2025-11-09.md  SESSION_NOTES.md  TESTING_QUICK_START.md  WIZARD_DEVELOPMENT_LOG.md  YAML_SELECTORS_VISION.md
docs/archive/old-quickstarts/: BLIND_TEST_GUIDE.md  FIRST_RUN.md  QUICKSTART.md  README_OLD.md
examples/: use_selector_utilities.py
examples/jobs/: fda_advanced.yml
examples/schemas/: nyt_resilient.yml
exports/: nytus_polished.csv
foundry/: __init__.py  __main__.py  cli.py  core.py  foundry.py  state.py  wizard.py
foundry/connectors/: __init__.py  custom.py  fda.py  generic.py  nws.py
foundry/framework_profiles/cms/: __init__.py
foundry/framework_profiles/css/: tailwind.py
foundry/framework_profiles/ecommerce/: __init__.py  shopify.py  woocommerce.py
foundry/framework_profiles/frameworks/: django.py
foundry/framework_profiles/universal/: opengraph.py  schema_org.py  twitter_cards.py
foundry/lib/: __init__.py  http.py  policy.py  robots.py
foundry/sinks/: base.py  csv.py  jsonl.py  parquet.py
foundry/tools/blueprint/: builder.py  cli.py  preview.py  templates.py
foundry/tools/forge/: cli.py  executor.py  parser.py
foundry/tools/probe/: analyzer.py  cli.py
foundry/transforms/: custom.py  fda.py  nws.py
jobs/: demo_job.yml  example_job.yml  fda.yml  hackernews_test.yml  test_job.yml
quarry/: __init__.py  __main__.py  cli.py  core.py  foreman.py  inspector.py  miner.py  quarry.py  state.py  wizard.py
quarry/connectors/: __init__.py  custom.py  fda.py  generic.py  nws.py
quarry/framework_profiles/: __init__.py  base.py
quarry/framework_profiles/ecommerce/: woocommerce.py
quarry/framework_profiles/frameworks/: nextjs.py
quarry/framework_profiles/universal/: __init__.py  opengraph.py  schema_org.py  twitter_cards.py
quarry/lib/: __init__.py  bs4_utils.py  http.py  logging.py  paths.py  policy.py  prompts.py  robots.py  schemas.py  selectors.py  session.py  theme.py
quarry/sinks/: base.py  csv.py  jsonl.py  parquet.py  postgres.py
quarry/tools/excavate/: __init__.py  cli.py  executor.py  parser.py
quarry/tools/polish/: __init__.py  cli.py  processor.py  transformers.py  validators.py
quarry/tools/scout/: analyzer.py  api_guide.py  cli.py  reporter.py
quarry/tools/ship/: __init__.py  base.py  cli.py  exporters.py
quarry/tools/survey/: __init__.py  builder.py  cli.py  job_generator.py  preview.py  templates.py
quarry/transforms/: custom.py  fda.py  generic.py  nws.py
schemas/: extraction.yml  nyt_us.yml  nytus.yml  ust_feat.yml
scrapesuite/: __init__.py  cli.py  core.py  framework_profiles.py  http.py  inspector.py  policy.py  robots.py  wizard.py
scrapesuite/connectors/: __init__.py  generic.py
scrapesuite/framework_profiles/: __init__.py  base.py
scrapesuite/framework_profiles/cms/: drupal.py  wordpress.py
scrapesuite/framework_profiles/css/: __init__.py  bootstrap.py
scrapesuite/framework_profiles/ecommerce/: __init__.py  woocommerce.py
scrapesuite/framework_profiles/frameworks/: __init__.py  react.py  vue.py
scrapesuite/framework_profiles/universal/: __init__.py  opengraph.py  schema_org.py  twitter_cards.py
scrapesuite/lib/: __init__.py  policy.py  schemas.py
scrapesuite/sinks/: jsonl.py
scrapesuite/tools/blueprint/: builder.py  templates.py
scrapesuite/tools/probe/: reporter.py
scripts/: audit_schema_selectors.py  build_batches.py  debug_fda.py  profile_framework_detection.py
tests/: test_bi_use_cases.py  test_blueprint.py  test_crate.py  test_deduplicator.py  test_edge_cases.py  test_excavate.py  test_excavate_executor.py  test_excavate_parser.py  test_expanded_fields.py  test_failed_urls.py  test_forge.py  test_framework_boosting.py  test_framework_scoring.py  test_generic_connector.py  test_http_bot_evasion.py  test_http_client.py  test_inspector.py  test_logging.py  test_new_framework_profiles.py  test_opengraph_profile.py  test_parsers.py  test_paths.py  test_polish.py  test_polish_processor.py  test_postgres_sink.py  test_probe.py  test_prompts.py  test_ratelimit.py  test_reporter.py  test_robots_policy.py  test_run_job.py  test_scout.py  test_selector_builder.py  test_selector_detection.py  test_session.py  test_ship.py  test_ship_base.py  test_ship_exporters.py  test_sinks.py  test_state.py  (+8 more)
tests/fixtures/: wizard_sample.html
