[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foundry"
version = "2.0.0"
description = "An intuitive web scraping toolkit with intelligent templates and interactive workflows"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "pyarrow",
    "pyyaml",
    "typer",
    "questionary",
    "pydantic",
    "rich",
    "click",
]

[project.scripts]
foundry = "foundry.foundry:main"
"foundry.probe" = "foundry.tools.probe.cli:probe"
"foundry.blueprint" = "foundry.tools.blueprint.cli:blueprint"
"foundry.forge" = "foundry.tools.forge.cli:forge"
"foundry.polish" = "foundry.tools.polish.cli:polish"
"foundry.crate" = "foundry.tools.crate.cli:crate"

[tool.setuptools]
packages = ["foundry"]

[tool.setuptools.package-data]
foundry = ["**/*.json", "**/*.yml", "**/*.yaml"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PL", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing - will enable module by module
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Disabled during gradual migration
strict_equality = true

# Per-module options for gradual typing
[[tool.mypy.overrides]]
module = "foundry.framework_profiles.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "foundry.http"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# External dependencies without type stubs
[[tool.mypy.overrides]]
module = [
    "bs4.*",
    "questionary.*",
    "pyarrow.*",
]
ignore_missing_imports = true

